near-sdk-macros/src/core_impl/code_generator/snapshots/private_method.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 328
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn private_method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::current_account_id() != ::near_sdk::env::predecessor_account_id()
    {
        ::near_sdk::errors::PrivateMethod::new("private_method");
    }
    if ::near_sdk::env::attached_deposit().as_yoctonear() != 0 {
        ::near_sdk::env::panic_err(
            ::near_sdk::errors::DepositNotAccepted::new("private_method").into(),
        );
    }
    let mut contract: Hello = ::near_sdk::env::state_read().unwrap_or_default();
    contract.private_method();
    ::near_sdk::env::state_write(&contract);
}
